<resources>
    <string name="app_name">Money Manager</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit</string>
    <string name="saved_money">Save Money</string>
    <string name="sum_money">All Money</string>
    <string name="add_deal">Add Transaction</string>
    <string name="statis_deal">Static Transaction</string>
    <string name="manager_acc">Manager Account</string>
    <string name="about">Infor</string>
    <string name="type_acc">Account</string>
    <string name="type_deal">Type</string>
    <string name="spend">Expense</string>
    <string name="revenue">Income</string>
    <string name="iput_money">Input amouts of money</string>
    <string name="iput_content_deal">Input content of transaction</string>
    <string name="save">Save</string>
    <string name="save_closed">Save and Close</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="add">Add</string>
    <string name="delete">Remove</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="date">Time</string>
    <string name="content">Content</string>
    <string name="amount_money">Amount</string>
    <string name="over_balance">Balance</string>
    <string name="type_transaction">Type</string>
    <string-array name="type_acc">
        <item>Cash</item>
        <item>Credit</item>
        <item>Save Money</item>
    </string-array>
    <string-array name="add_acc">
        <item>Add account</item>
        <item>Cash</item>
        <item>Credit</item>
        <item>Save Money</item>
    </string-array>
    <string-array name="type_deal">
        <item>Income</item>
        <item>Expenses</item>
    </string-array>
    <string name="title_activity_manager_acc">Manager account</string>
    <string name="title_activity_statis_deal">Static deals</string>
    <string name="add_money">Please input money !</string>
    <string name="title_dialog">Information App</string>
    <string name="name_app"><b>App name</b> : Manager money</string>
    <string name="version_app"><b>Version</b> : 1.0</string>
    <string name="dev_app"><b>Developer</b> : Nguyễn Đình Khoa</string>
    <string name="email_support"><b>Email Support</b> : khnguyendinh@gmail.com</string>
    <string name="banner_ad_unit_id">ca-app-pub-7238758076685505/9101296674</string>
    <string name="id_full_admob">ca-app-pub-7238758076685505/3054763076</string>
    <string name="id_video_admob">ca-app-pub-7238758076685505/8961695876</string>
    <string name="id_native_admob"> ca-app-pub-7238758076685505/4531496278</string>
    <string name="add_acc_type">Add Account Type</string>
    <string name="add_acc_money">Add Account Money</string>
    <string name="start_date">Select Start Deal</string>
    <string name="select_time">Select Time</string>
    <string name="end_date">Select end date</string>
</resources>
