<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="60dp"
    android:gravity="center_vertical"
    android:background="@drawable/border4_gray"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    >

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:text="@string/date"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textColor="@color/color_black"/>
    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:text="@string/content"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textColor="@color/color_black"/>
    <TextView
        android:id="@+id/money"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:text="@string/amount_money"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textColor="@color/color_black"/>
    <TextView
        android:id="@+id/balance"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:text="@string/over_balance"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textColor="@color/color_black"/>
    <TextView
        android:id="@+id/type_acc"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:text="@string/type_acc"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textColor="@color/color_black"/>
    <TextView
        android:id="@+id/type_deal"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent"
        android:text="@string/type_transaction"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textColor="@color/color_black"/>
</LinearLayout>