<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_date"
            android:textColor="@color/color_black"
            android:textSize="@dimen/tsize_18"/>
        <Button
            android:id="@+id/btn_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="14/24/1990"
            android:background="@drawable/border4_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/color_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/to_date"
            android:textColor="@color/color_black"
            android:textSize="@dimen/tsize_18"/>

        <Button
            android:id="@+id/btn_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border4_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="14/24/1990"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">
        <Spinner
            android:id="@+id/spn_type_money"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/stroke4_blue"
            android:layout_marginRight="5dp"></Spinner>
        <Spinner
            android:id="@+id/spn_type_spend"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@drawable/stroke4_blue"
            android:entries="@array/type_deal"></Spinner>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border4_gray"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/date"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/color_black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/content"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/color_black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/amount_money"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/color_black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/over_balance"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/color_black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/type_acc"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/color_black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/type_transaction"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/color_black"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></android.support.v7.widget.RecyclerView>

</LinearLayout>
