<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context="app.lampstudio.com.quanlychitieu.Add_transaction"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border4_gray"
            android:text="@string/type_acc"
            android:textSize="@dimen/tsize_18"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="3dp"
            android:textColor="@color/color_black"
            />
        <Spinner
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/stroke4_blue"
            android:drawSelectorOnTop="true"
            android:entries="@array/type_acc"
            ></Spinner>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border4_gray"
            android:text="@string/type_deal"
            android:textSize="@dimen/tsize_18"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="3dp"
            android:textColor="@color/color_black"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spend"
                android:textColor="@color/color_black"
                android:textSize="@dimen/tsize_18"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revenue"
                android:textColor="@color/color_black"
                android:textSize="@dimen/tsize_18"/>
        </RadioGroup>
        <EditText
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tsize_20"
            android:paddingLeft="5dp"
            android:hint="@string/iput_money"
            android:background="@drawable/stroke4_blue"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:inputType="number"/>
        <EditText
            android:layout_marginTop="8dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tsize_20"
            android:hint="@string/iput_content_deal"
            android:background="@drawable/stroke4_blue"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_date"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="date"
                android:background="@drawable/border4_blue"
                android:textColor="@color/color_white"/>
            <Button
                android:id="@+id/time"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="time"
                android:background="@drawable/border4_blue"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_white"/>

        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">
        <Button
            android:id="@+id/btn_save"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/border4_blue"
            android:textColor="@color/color_white"/>
        <Button
            android:id="@+id/btn_saveAndClose"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/save_closed"
            android:background="@drawable/border4_blue"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_white"/>

    </RelativeLayout>

</RelativeLayout>
